[package]
name = "pngtonext"
version = "0.1.0"
authors = ["Captain Black <captainblack@zx-spectrum.org.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
argparse = "0.2.2"
custom_error = "1.7.1"
lazy_static = "1.4.0"
rgb = "0.8"
inflate = "0.4.2"
colour = "0.3.0"
bitstream-io = "0.8.4"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
